# proyecto-microservicios-e-commerce

./: AGENTS.md  AUTH_ENV_REVIEW.md  Cargo.toml  INTEGRATION_SUMMARY.md  README.md  auth_service.rar  docker-compose.yml  nginx-inventory.conf  orders-service-schema.md  request.http
InventoryService/: .env  .env.local  Cargo.toml  Dockerfile  docker-compose.yml
InventoryService/src/: handlers.rs  main.rs  models.rs  (+4 more)
auth-service/: Dockerfile  requirements.txt
auth_service/: .dockerignore  .env  .env.example  Dockerfile  auth.py  config.py  database.py  docker-compose.yml  init_db.py  mailer.py  main.py  models.py  requirements.txt  schemas.py  security.py  usuarios.db
auth_service /: .env  Dockerfile  auth.py  database.py  docker-compose.yml  email_verification.py  main.py  models.py
frontend/: .env  .env.example  Dockerfile  PAYMENT_IMPLEMENTATION.md  UI_IMPLEMENTATION.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
inventory-service/: .env  .env.example  Dockerfile  autenticacion.rs  base_datos.rs  main.rs  rutas_inventario.rs
notifications-service/: .dockerignore  .env  .env.example  DOCKER_COMPOSE.md  Dockerfile  README.md  docker-compose.yml  go.mod  handlers.go  main.go  models.go  notifications_server.py  service.go
orders-service/: pom.xml
payments-service/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
product-service/: composer.json
products-service/: .env.example  Dockerfile  composer.json  entrypoint.sh
verificacion/: claves.txt  main.py
(+128 files in other folders)
