[package]
name = "inventory-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Postgres via sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

# JWT
jsonwebtoken = "9"

# Carga de variables de entorno
dotenvy = "0.15"

thiserror = "1.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
